--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.1",
+    "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
     "siwe": "^1.1.6",
     "typescript": "^4.6.0",
