--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@types/react": "^18.0.6",
     "@types/react-dom": "^18.0.2",
     "ethers": "^5.5.1",
+    "gapi-script": "^1.2.0",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.1",
@@ -46,6 +48,7 @@
     ]
   },
   "devDependencies": {
+    "@types/gapi": "^0.0.43",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.18",
     "tailwindcss": "^3.2.2"
